Fixes issue with multiselect overflow

--- a/assets/_styles/_forms.scss
+++ b/assets/_styles/_forms.scss
@@ -435,7 +435,7 @@ input[type="file"] {
 
 %validation-box {
   padding: 1em 1em .5em 1em;
-  overflow: auto;
+  overflow: visible;
   background: $warning-background;
   @media (max-width: 640px){
     margin-left: -1em;
